[package]
name = "grafana-prowl-notifier"
version = "0.3.1"
edition = "2021"
authors = ["Myles Empty Best"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
log = "0.4.0"
env_logger = "0.8.4"
prowl = "0.2.0"
tokio = { version = "1.20.1", features = ["full"] }
derive-getters = "0.2.0"
thiserror = "1.0.33"
