[package]
name = "grafana-prowl-notifier"
version = "0.5.1"
edition = "2021"
authors = ["Myles Empty Best"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
log = "0.4.0"
env_logger = "0.8.4"
prowl = { version = "0.2.5", features = ["serde"] }
# prowl = { path = "../prowl", features = ["serde"] }
tokio = { version = "1.20.1", features = ["full"] }
derive-getters = "0.2.0"
thiserror = "1.0.33"
chrono = { version = "0.4.22", features = ["serde"] }
